# usocket

./: CMakeLists.txt  LICENSE  README.md  config.h.in
core/: CMakeLists.txt  uns_error.c  uns_socket.c
include/: type.h  uns_error.h  uns_socket.h
test/: 1-daytimetcpclient.c  1-daytimetcpsrv.c  2-childprocesstcpclient.c  3-1-selecttcpsrv.c  3-selecttcpclient.c  3-selecttcpsrv.c  4-polltcpclient.c  4-polltcpsrv.c  CMakeLists.txt  tcpclient.c  tcpsrv.c
